fix: add concurrency lock and reduce duplication in updateEntity/deleteEntity
Add ReentrantLock to updateEntity and deleteEntity to prevent lost updates
under concurrent requests. Extract persistSnapshotModification template method
to eliminate the duplicated snapshot lifecycle pattern. Simplify
normalizeOptionalText nested ternary with isBlank().

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>